crates/reinhardt-pages/tests/ui/component/fail/plain_arg.stderr
error: #[component] arguments must use extractor destructuring such as Path(id): Path<i64>
 --> tests/ui/component/fail/plain_arg.rs:6:14
  |
6 | fn user_page(id: i64) -> Page {
  |              ^^
